--- a/css/index.css
+++ b/css/index.css
@@ -3,27 +3,28 @@ body {
     align-items: center;
 }
 
-.centeredchildren {
+#formdiv {
     text-align: center;
     display: block;
-    position:relative;
-    top:33%;
 }
 
 form:not(.invisible){
-    width:200px;
-    height:33%;
+    width:350px;
+    height:400px;
 
     display: inline-block;
     text-align: center;
     border-radius: 15px;
-    padding:30px;
-    margin:50vh;
 
     background-color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: serif;
 }
 
 form>*{
     display:block;
+}
+
+.verify{
+    color: red;
+    font-family: system-ui;
 }
