--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ form:not(.invisible){
     display: inline-block;
     text-align: center;
     border-radius: 15px;
+    border: 2px solid rgb(44, 51, 39);
 
     background-color: white;
     font-family: serif;
