--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@ body {
 
 #formdiv {
     text-align: center;
+    justify-content: center;
     display: block;
 }
 
@@ -14,6 +15,7 @@ form:not(.invisible){
 
     display: inline-block;
     text-align: center;
+    justify-content: center;
     border-radius: 15px;
     border: 2px solid rgb(44, 51, 39);
 
