sign up working (no email)

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body {
     align-items: center;
 }
 
-#formdiv {
+div.formdiv {
     text-align: center;
     justify-content: center;
     display: block;
