--- a/css/blog.css
+++ b/css/blog.css
@@ -1,37 +1,24 @@
-p, h2 {
-    color: black;
+html {
+    height: 100%;
 }
 
-iframe{
+body {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-family: sans-serif;
+    background: linear-gradient(#141e30, #243b55)
+}
+
+iframe {
     display: block;
     overflow-x: hidden;
     overflow-y: scroll;
     scrollbar-color: transparent transparent;
 }
 
-#framecontainer {
+.framecontainer {
     width : 382px;
     overflow: hidden;
     scrollbar-color: transparent transparent;
-}
-
-div.bubble {
-    background-color: rgb(197, 192, 192);
-    border-radius: 15px;
-    width: 100%;
-    height: auto;
-    text-align: center;
-    margin-bottom : 20px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-}
-
-div.bubbles {
-    width: 360px;
-    margin-right : 22.5px;
-    overflow: hidden;
-    overflow-y: scroll;
-    scrollbar-color: transparent transparent;
-    justify-content: center;
-    align-items: center;
 }
