--- a/css/style.css
+++ b/css/style.css
@@ -32,17 +32,24 @@ form>*{
     margin-bottom: 30px;
 }
 
+.breakword {
+    word-break: break-word;
+}
+
 .formdiv {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     width: 380px;
     padding: 35px;
-    transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, .5);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
     border-radius: 10px;
+}
+
+.formdiv:not(#postdiv) {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
 }
 
 .formdiv h2 {
