--- a/css/post.css
+++ b/css/post.css
@@ -1,4 +1,4 @@
-img{
+img:not(.icon){
     height : 50px;
     align-self: center;
 }
@@ -62,7 +62,7 @@ button:hover {
     background-color: #40576d1a;
 }
 
-button {
+button:not(.download-button) {
     border: none;
     color: white;
     font-size: 20px;
@@ -134,6 +134,13 @@ div.formdiv#postdiv {
     align-self: center;
     justify-self: center;
     padding : 22px;
+    max-width:500px;
+}
+
+@media only screen and (max-width:500px) {
+    div.formdiv#postdiv {
+        max-width:100vw;
+    }
 }
 
 #contentLabel {
