--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ form>*{
 }
 
 .formdiv {
-    width: 380px;
     padding: 35px;
     background: rgba(0, 0, 0, .5);
     box-sizing: border-box;
@@ -50,6 +49,13 @@ form>*{
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    width: 380px;
+}
+
+@media only screen and (max-width: 380px){
+    .formdiv:not(#postdiv) {
+        width: 100vw;
+    }
 }
 
 .formdiv h2 {
@@ -312,6 +318,12 @@ input[type="file"] {
     justify-content: center;
 }
 
+@media only screen and (max-width:500px) {
+    .bubbles {
+        max-width:100vw;
+    }
+}
+
 .bubble {
     background: rgba(0, 0, 0, .5);
     box-sizing: border-box;
@@ -331,7 +343,7 @@ input[type="file"] {
     padding : 10px 30px;
 }
 
-.bubble#article img {
+.bubble#article img:not(.icon) {
     width:350px;
 }
 
@@ -356,4 +368,18 @@ div.container>img{
 .bubble:not(.static)#action{
     justify-content: center;
     display:flex;
+}
+
+video {
+    width:100%;
+}
+
+.download-button {
+    border: none;
+    color: white;
+    background-color: #00000057;
+    border-radius: 5px;
+    padding: 10px;
+    display: inline;
+    margin: 5px;
 }
